# Sentrilog

./: .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
infra/docker/postgres-init/: 001_schema.sql
infra/terraform/: README.md
services/intake/: README.md
services/pipeline/: README.md
services/screening/: README.md
tests/: test_scaffold.py
