[project]
name = "sentrilog"
version = "0.1.0"
description = "KYC/AML Document Intelligence Pipeline"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
